<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@android:color/transparent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/editMoodCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="#242323"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- Title of the dialog -->
            <TextView
                android:id="@+id/edit_mood_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/righteous"
                android:paddingBottom="16dp"
                android:text="Edit Mood Event"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Event Title Label -->
            <TextView
                android:id="@+id/event_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="Title"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_mood_title" />

            <!-- Event Title EditText -->
            <EditText
                android:id="@+id/edit_title"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@drawable/rounded_background"
                android:gravity="center_vertical"
                android:hint="Ex: Party"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_title_label" />

            <!-- Emotional State Label -->
            <TextView
                android:id="@+id/emotion_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="4dp"
                android:text="Emotional State"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_title" />

            <!-- Emotional State Spinner -->
            <Spinner
                android:id="@+id/edit_emotion_spinner"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@drawable/spinner_rounded_background_with_arrow"
                android:gravity="center_vertical"
                android:paddingStart="14dp"
                android:paddingEnd="20dp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emotion_label" />

            <!-- Reason Label -->
            <TextView
                android:id="@+id/reason_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="4dp"
                android:text="Reason (optional)"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_emotion_spinner" />

            <!-- Reason EditText -->
            <EditText
                android:id="@+id/edit_reason"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@drawable/rounded_background"
                android:gravity="center_vertical"
                android:hint="Ex: Birthday"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reason_label" />

            <!-- Social Situation Label -->
            <TextView
                android:id="@+id/social_situation_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="4dp"
                android:text="Social Situation (optional)"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_reason" />

            <!-- Social Situation Spinner -->
            <Spinner
                android:id="@+id/edit_social_situation_spinner"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@drawable/spinner_rounded_background_with_arrow"
                android:gravity="center_vertical"
                android:paddingStart="14dp"
                android:paddingEnd="20dp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/social_situation_label" />

            <!-- Spacer TextView (for padding) -->
            <TextView
                android:id="@+id/spacer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:text=""
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_social_situation_spinner" />

            <!-- Chips Container -->

            <!-- Image Upload Label -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/chips_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spacer">

                <com.google.android.material.chip.Chip
                    android:id="@+id/privateChip_editmood"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:text="Make Private"
                    android:textColor="@color/white"
                    app:checkedIcon="@drawable/ic_check"
                    app:checkedIconEnabled="true"
                    app:checkedIconTint="#f8b64c"
                    app:chipCornerRadius="27dp"
                    app:chipStrokeWidth="1dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/image_upload_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:text="Upload an Image (optional)"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chips_container" />

            <!-- Image Upload Container -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/image_upload_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_upload_label">

                <ImageButton
                    android:id="@+id/image_edit_button"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:background="@drawable/rounded_background"
                    android:src="@drawable/material_camera"
                    android:contentDescription="Select image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/delete_image_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/camera_rounded_background"
                    android:contentDescription="Remove image"
                    android:src="@android:drawable/ic_menu_delete"
                    app:layout_constraintBottom_toBottomOf="@+id/image_edit_button"
                    app:layout_constraintStart_toEndOf="@+id/image_edit_button"
                    app:layout_constraintTop_toTopOf="@+id/image_edit_button" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Buttons Container -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/buttons_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_upload_container">

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="#808080"
                    android:padding="8dp"
                    android:paddingTop="16dp"
                    android:text="Cancel"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/saveButton"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#f8b64c"
                    android:padding="8dp"
                    android:paddingTop="16dp"
                    android:text="Update"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cancelButton"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>