...
        android:id="@+id/map"/>
    <item android:title="Add"
        android:icon="@drawable/ic_baseline_add_24"
        android:id="@+id/add"/>
    <item android:title="History"
        android:icon="@drawable/ic_baseline_history_24"
        android:id="@+id/history"/>
    <item android:title="Profile"
        android:icon="@drawable/ic_baseline_profile_24"
        android:id="@+id/profile"/>
</menu>
