...
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/sentio_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sentio_logo" />

        <ListView
            android:id="@+id/historyListView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:divider="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
