...
                            android:textColor="@color/white"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/reason_label" />

                        <Button
                            android:id="@+id/editButton"
                            android:layout_width="73dp"
                            android:layout_height="35dp"
                            android:backgroundTint="#f8b64c"
                            android:text="Edit"
                            android:padding="0dp"
                            android:textColor="@color/black"
...
